Initial commit of classes and packages-2

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,33 @@
 spring.application.name=svc-user-management
+server.port = 1010
+
+# Actuator
+management.endpoints.web.exposure.include=*
+
+# swagger-ui custom path
+# springdoc.swagger-ui.path=/swagger-ui.html
+
+# In order to display spring-boot-actuator endpoints, simply add the following property:
+springdoc.show-actuator=true
+
+#####################################
+### Data Base Related Properties ###
+####################################
+# spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.url=jdbc:postgresql://localhost:5432/database
+spring.datasource.username=user_management
+spring.datasource.password=root
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL94Dialect
+# use for pretty-print SQL statements in console.
+spring.jpa.properties.hibernate.format_sql=true
+
+# The spring.jpa.hibernate.naming.implicit-strategy property allows you to customize how Hibernate generates
+# implicit names for database tables and columns when they are not explicitly defined. It is useful for aligning
+# database naming conventions (like snake_case) with your entity class field naming conventions (like camelCase)
+# or for backward compatibility with legacy systems.
+# spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyJpaCompliantImpl
+
+
+
