--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,32 @@
 spring.application.name=svc-user-management
 server.port = 1010
 
-# Actuator
-management.endpoints.web.exposure.include=*
+#########################
+#### DevTool Related ####
+#########################
+# add static files into devtool for live reload
+#spring.web.resources.static-locations=file:src/main/resources/static/
+spring.devtools.restart.additional-paths=file:src/main/java/com/insta/
 
+##########################
+#### Logger Related ####
+#########################
+# by default logging level is Info
+# logging.level.org.springframework=info
+
+##########################
+### Swagger Related #####
+#########################
 # swagger-ui custom path
 # springdoc.swagger-ui.path=/swagger-ui.html
+# http://server:port/context-path/swagger-ui.html
+# http://server:port/context-path/v3/api-docs
 
+#####################################
+##### Actuator Related ######
+#####################################
+# Actuator
+management.endpoints.web.exposure.include=*
 # In order to display spring-boot-actuator endpoints, simply add the following property:
 springdoc.show-actuator=true
 
@@ -14,12 +34,14 @@ springdoc.show-actuator=true
 ### Data Base Related Properties ###
 ####################################
 # spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.url=jdbc:postgresql://localhost:5432/database
-spring.datasource.username=user_management
+spring.datasource.url=jdbc:postgresql://localhost:5432/user_management
+spring.datasource.username=postgres
 spring.datasource.password=root
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL94Dialect
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+# ?createDatabaseIfNotExist=true&useSSL=false
+
 # use for pretty-print SQL statements in console.
 spring.jpa.properties.hibernate.format_sql=true
 
