Initial commit of classes and packages-4

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,5 @@
 spring.application.name=svc-user-management
-server.port = 1010
-
+server.port=1010
 #########################
 #### DevTool Related ####
 #########################
@@ -13,7 +12,6 @@ spring.devtools.restart.additional-paths=file:src/main/java/com/insta/
 #########################
 # by default logging level is Info
 # logging.level.org.springframework=info
-
 ##########################
 ### Swagger Related #####
 #########################
@@ -21,15 +19,13 @@ spring.devtools.restart.additional-paths=file:src/main/java/com/insta/
 # springdoc.swagger-ui.path=/swagger-ui.html
 # http://server:port/context-path/swagger-ui.html
 # http://server:port/context-path/v3/api-docs
-
 #####################################
 ##### Actuator Related ######
 #####################################
 # Actuator
 management.endpoints.web.exposure.include=*
 # In order to display spring-boot-actuator endpoints, simply add the following property:
-springdoc.show-actuator=true
-
+springdoc.show-actuator=false
 #####################################
 ### Data Base Related Properties ###
 ####################################
@@ -38,13 +34,10 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/user_management
 spring.datasource.username=postgres
 spring.datasource.password=root
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-# ?createDatabaseIfNotExist=true&useSSL=false
-
 # use for pretty-print SQL statements in console.
 spring.jpa.properties.hibernate.format_sql=true
-
 # The spring.jpa.hibernate.naming.implicit-strategy property allows you to customize how Hibernate generates
 # implicit names for database tables and columns when they are not explicitly defined. It is useful for aligning
 # database naming conventions (like snake_case) with your entity class field naming conventions (like camelCase)
