Initial commit of classes and packages-6

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,7 +35,8 @@ spring.datasource.username=postgres
 spring.datasource.password=root
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+# No need to define dialect after Hibernate 5.2
+# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 # use for pretty-print SQL statements in console.
 spring.jpa.properties.hibernate.format_sql=true
 # The spring.jpa.hibernate.naming.implicit-strategy property allows you to customize how Hibernate generates
