Initial commit of classes and packages-9

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -45,5 +45,4 @@ spring.jpa.properties.hibernate.format_sql=true
 # or for backward compatibility with legacy systems.
 #spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyJpaCompliantImpl
 
-
-
+#spring.datasource.initialization-mode=always: This ensures that the data.sql script is always run on startup.
