--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port=1010
 #### DevTool Related ####
 #########################
 # add static files into devtool for live reload
-#spring.web.resources.static-locations=file:src/main/resources/static/
+spring.web.resources.static-locations=file:src/main/resources/static/
 spring.devtools.restart.additional-paths=file:src/main/java/com/insta/
 
 ##########################
